# CoT-evaluate-

./: README.md
experiment_A/: README.md  pyproject.toml  requirements.txt
experiment_A/configs/: dataset_full.yaml  dataset_pilot.yaml  reward_groups.yaml  sft.yaml
experiment_A/docs/: annotation_guide.md  manual_intervention_protocol.md
experiment_A/outputs/: qwen_A0_hidden_cue.jsonl  qwen_A0_original.jsonl  qwen_A5_hidden_cue.jsonl  qwen_A5_original.jsonl
experiment_A/prompts/: blackbox_prompt.txt  evaluator_prompt.txt  qwen_prompt.txt
experiment_A/scripts/: apply_manual_annotations.py  evaluate_outputs.py  make_annotation_sample.py  make_figures.py  prepare_dataset.py  run_inference.py  train_rl_grpo.py  train_sft.py
experiment_B/: README.md  pyproject.toml  requirements.txt
experiment_B/configs/: dataset_full.yaml  dataset_pilot.yaml  reward_groups.yaml  rl_grpo.yaml
experiment_B/docs/: appendix_hidden_cue_templates.md  manual_annotation_protocol.md
experiment_B/prompts/: blackbox_hidden_cue_prompt.txt  evaluator_hidden_cue_prompt.txt  qwen_hidden_cue_prompt.txt
experiment_B/scripts/: apply_manual_annotations.py  evaluate_hidden_cue.py  make_annotation_sample.py  make_figures.py  prepare_hidden_cue_dataset.py  run_inference.py  train_rl_grpo.py  train_sft.py
experiment_C/: README.md  pyproject.toml
experiment_C/configs/: dataset_full.yaml  dataset_pilot.yaml  reward_config_C0_to_C5.yaml  rl_grpo.yaml  sft.yaml
experiment_C/docs/: manual_audit_protocol.md
experiment_C/scripts/: apply_manual_audits.py  (+7 more)
experiment_D/: README.md  pyproject.toml
(+106 files in other folders)
