[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-a-cot"
version = "0.1.0"
description = "Experiment A pipeline for CoT readability pressure, faithfulness, and hidden-cue evaluation."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
