[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-c-reward-hacking"
version = "0.1.0"
description = "Experiment C pipeline for CoT pressure and reward hacking."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
