[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-d-mitigation"
version = "0.1.0"
description = "Experiment D pipeline for mitigation strategy effectiveness."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
